--- a/templates/local_settings.py.erb
+++ b/templates/local_settings.py.erb
@@ -7,7 +7,7 @@
 TIME_ZONE = '<%= @time_zone %>'
 
 # Setting MEMCACHE_HOSTS to be empty will turn off use of memcached entirely
-#MEMCACHE_HOSTS = ['127.0.0.1:11211']
+MEMCACHE_HOSTS = <%= @memcache_hosts.to_s %>
 
 # Sometimes you need to do a lot of rendering work but cannot share your storage mount
 #REMOTE_RENDERING = True
